--- a/client/front-end/src/App.css
+++ b/client/front-end/src/App.css
@@ -43,10 +43,10 @@ button,
 input[type="submit"] {
   width: auto;
   padding: 16px 34px;
-  background: #d746dc;
+  background: #f0aaaa;
   border: 0;
   font-size: 16px;
-  color: #ffffff;
+  color: black;
   margin-top: 10px;
   font-weight: 600;
 }
@@ -56,4 +56,9 @@ input[type="submit"] {
 }
 .form-wrapper {
   width: 400px;
+}
+.register {
+  color: #333;
+  text-decoration: underline;
+  font-size: 20px;
 }
