--- a/client/front-end/src/App.css
+++ b/client/front-end/src/App.css
@@ -1,64 +1,5 @@
-ul {
-  display: flex;
-  justify-content: space-around;
-  background-color: crimson;
-  padding: 15px;
-}
-a {
-  text-decoration: none;
-  color: white;
-}
-li {
-  list-style: none;
-  font-size: 28px;
-}
-h1 {
-  text-align: center;
-}
-p {
-  font-size: 20px;
-}
-input {
-  padding: 19px;
-  border: solid 1px #9a9a9a;
-  outline: 0;
-  font: normal 22px/100% Verdana, Tahoma, sans-serif;
-  width: 40%;
-  background: #ffffff;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-}
-
-input:hover input:focus {
-  border-color: #c9c9c9;
-}
-
-label {
-  margin-left: 0px;
-  color: #999999;
-}
-
-button,
-input[type="submit"] {
-  width: auto;
-  padding: 16px 34px;
-  background: #f0aaaa;
-  border: 0;
-  font-size: 16px;
-  color: black;
-  margin-top: 10px;
-  font-weight: 600;
-}
-.form-demo {
-  padding: 30px 0 500px;
-  margin: 0 auto;
-}
-.form-wrapper {
-  width: 400px;
-}
-.register {
-  color: #333;
-  text-decoration: underline;
-  font-size: 20px;
 }
